--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/johan/anaconda3/envs/mcenv/bin/python"
+    "python.pythonPath": "e:\\asisten riset\\sentiment analysis\\project_env\\Scripts\\python.exe"
 }
